# nockchain

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .gitlab-ci.yml  AI_POW_SPECIFIC_AUDIT.md  BUILD.bazel  Cargo.toml  Dockerfile  MODULE.bazel  Makefile  PLAN-ASERT-UPGRADE.md  PMA-FAQ.md  PROTOCOL.md  README.md  docker-compose.metrics.yml  example-nockapp.toml  flake.nix  rust-toolchain.toml
Plonky3-recursion/tip5-circuit-air/: Cargo.toml
Plonky3-recursion/tip5-circuit-air/src/: air.rs  air_circuit.rs  air_lookup.rs  generation_lookup.rs  lib.rs  perm.rs  tip5_spec.rs
assets/: BUILD.bazel
crates/ai-pow/: B1_PEARL_FAITHFULNESS_AUDIT.md  Cargo.toml  FLAWS.md  LICENSE-PEARL  PEARL_COMPARISON.md  README.md
crates/ai-pow-miner/: Cargo.toml
crates/ai-pow-miner/src/: certificate_noun.rs  lib.rs  mining.rs  nockapp_driver.rs  pearl_mining.rs  pearl_plain_proof.rs  run.rs  wire.rs
crates/ai-pow-mining/: Cargo.toml
crates/ai-pow-mining/src/: lib.rs  mining.rs  nockapp_driver.rs
crates/ai-pow-vi/: .gitignore  Cargo.toml  NEXT_STEPS.md  QUANT_PROBLEM.md  QUANT_RESEARCH.md  README.md  ROADMAP.md
crates/ai-pow-vi/oracle/: README.md  README_REAL_MODELS.md  calibrate.py  extract_weights.py  forward_prefix_oracle.py  forward_reference.py  gen_scales_heuristic.py  gguf_reader.py  quantize_qwen.py  quantize_streaming.py  reference_ops.py  requirements.txt  streaming_merkle.py  streaming_writer.py  synth_prompt_oracle.py  synthetic_fixture.py  synthetic_gemma_mini.py  synthetic_qwen_hybrid_mini.py  synthetic_qwen_mini.py
crates/ai-pow-vi/src/: activation_lut.rs  activations.rs  attention.rs  comm_w.rs  deltanet.rs  determinism.rs  ffn.rs  forward.rs  io.rs  layer.rs  layernorm.rs  layout.rs  lib.rs  matmul_int8.rs  model.rs  prompt.rs  proof.rs  prover.rs  quant.rs  rmsnorm.rs  rope.rs  softmax.rs  ssm.rs  tile_hash.rs  verifier.rs
crates/ai-pow-vi/tests/: determinism_pins.rs  oracle_gemma_mini.rs  oracle_multi_arch.rs  oracle_op_vectors.rs  oracle_quantized_synthetic.rs  oracle_qwen.rs  oracle_qwen_hybrid_mini.rs  oracle_qwen_mini.rs  recompute_fixture_comm_w.rs
crates/ai-pow-zk/: BLAKE3_CHIP_ROUND_GATE_BUG.md  C1_RECURSION_VENDOR_DESIGN.md  C2_TIP5_AIR_DEGREE_WIDTH_TRADEOFF.md  C2_TIP5_CIRCUIT_AIR_DESIGN.md  C3_OUTER_CERT_DESIGN.md  CANONICAL_PROGRAM_DESIGN.md  Cargo.toml  DESIGN.md  ENGINEERING_REPORT.md  G3_RECURSION_AGGREGATION.md  G3_RECURSION_AUDIT.md  GAP_AUDIT.md  HIGH2_2_DESIGN.md  LICENSE-PEARL  M10_1C_DESIGN.md  M10_1C_PROGRESS.md  M52_MATRIX_BINDING.md  M_S2_G3AB_DESIGN.md  M_S2_PEARL_EVALUATION.md  PEARL_FP8_SCOPING.md  PEARL_VLLM_CPU_FORK_DESIGN.md  PHASE_B_DESIGN.md  PRODUCTION_ROADMAP.md  PROFILING.md  P_B2_STRIP_OPENING_DESIGN.md  README.md  ROADMAP.md  SEC_4C2_NOISE_BINDING_DESIGN.md  ZKP_SECURITY_REPORT.md
crates/ai-pow-zk/docs/: 2026-05-13_DESIGN.md  2026-05-13_ROADMAP.md  2026-05-14_ENGINEERING_REPORT.md  2026-05-14_M10_1C_PROGRESS.md  2026-05-14_M52_MATRIX_BINDING.md  2026-05-15_BLAKE3_CHIP_ROUND_GATE_BUG.md  2026-05-15_GAP_AUDIT.md  2026-05-15_HIGH2_2_DESIGN.md  2026-05-15_PROFILING.md  2026-05-15_ZKP_SECURITY_REPORT.md  2026-05-17_CANONICAL_PROGRAM_DESIGN.md  2026-05-17_G3_RECURSION_AGGREGATION.md  2026-05-17_G3_RECURSION_AUDIT.md  2026-05-17_M_S2_G3AB_DESIGN.md  2026-05-17_M_S2_PEARL_EVALUATION.md  2026-05-17_PRODUCTION_ROADMAP.md  2026-05-17_P_B2_STRIP_OPENING_DESIGN.md  2026-05-17_SEC_4C2_NOISE_BINDING_DESIGN.md  2026-05-18_C1_RECURSION_VENDOR_DESIGN.md  2026-05-18_C2_TIP5_AIR_DEGREE_WIDTH_TRADEOFF.md  2026-05-18_C2_TIP5_CIRCUIT_AIR_DESIGN.md  2026-05-18_PEARL_FP8_SCOPING.md  2026-05-18_PEARL_VLLM_CPU_FORK_DESIGN.md  2026-05-18_PHASE_B_DESIGN.md  2026-05-19_C3_OUTER_CERT_DESIGN.md  2026-05-19_C4_AUDIT_READINESS.md  2026-05-19_M_S5B_TERMINAL_COMPRESSION_DESIGN.md  2026-05-19_PROOF_SIZE_RECALIBRATION_MEASUREMENTS.md  2026-05-20_CONSTRAINT_INVENTORY.md  2026-05-20_CONSTRAINT_SOUNDNESS_ANALYSIS_DESIGN.md  2026-05-20_CONSTRAINT_SOUNDNESS_DERIVATION.md  2026-05-20_CSA_S5_CROSS_AIR_TAMPER_TESTS.md  2026-05-20_CSA_S6_PROPERTY_BASED_TESTS.md  2026-05-20_CSA_S7_AUDIT_SIGNOFF.md  2026-05-20_M_S5B_SOUNDNESS_ANALYSIS.md  2026-05-20_NPO_RECURSIVE_STARKS_DESIGN_REPORT.md  2026-05-20_PATH_B_B2_SAMPLE_BITS_DESIGN.md  2026-05-20_PATH_B_STAGE_0_COLUMN_INVENTORY.md  2026-05-20_PATH_B_STAGE_1_REDUCTION_MAP.md  2026-05-20_PATH_B_STATUS.md  (+40 more)
crates/ai-pow-zk/examples/: prod_recursion_measure.rs
crates/ai-pow-zk/proptest-regressions/: composite_full_air_with_lookups.txt
crates/ai-pow-zk/src/: air.rs  bench_suite.rs  binding.rs  blake3_air.rs  blake3_tree.rs  canonical.rs  circuit.rs  composite_air.rs  composite_full_air.rs  composite_full_air_with_lookups.rs  composite_layout.rs  composite_lookup_proof.rs  composite_lookups.rs  composite_preprocess.rs  composite_proof.rs  composite_public.rs  composite_trace.rs  found_leaf_air.rs  input_chip.rs  lib.rs  matmul_chip.rs  noise_ref.rs  params.rs  public.rs  recursion.rs  state_chip.rs  (+1 more)
crates/bridge/: BUILD.bazel  Cargo.toml  bridge-conf.example.toml
crates/bridge-dev/: Cargo.toml
crates/chaff/: BUILD.bazel  Cargo.toml
crates/habit/: BUILD.bazel  Cargo.toml
crates/hoon/: BUILD.bazel  Cargo.toml
crates/hoonc/: BUILD.bazel  Cargo.toml
crates/kernels/: BUILD.bazel  Cargo.toml  build.rs
crates/nockapp/: BUILD.bazel  Cargo.toml  README.md  build.rs  nockapp_tests.bzl
crates/nockapp-grpc/: BUILD.bazel  Cargo.toml
crates/nockapp-grpc-proto/: BUILD.bazel  Cargo.toml  build.rs
crates/nockchain-api/: BUILD.bazel  Cargo.toml  README.md
crates/nockchain-bridge-sequencer/: BUILD.bazel  Cargo.toml  sequencer-conf.example.toml
crates/nockchain-e2e/: BUILD.bazel  Cargo.toml
crates/nockchain-explorer-tui/: BUILD.bazel  Cargo.toml  README.md
crates/nockchain-libp2p-io/: BUILD.bazel  Cargo.toml
hoon/: BUILD.bazel
hoon/common/: bip39.hoon  h-zoon-test.hoon  h-zoon.hoon  hoon.hoon  nock-prover.hoon  schedule.hoon  tx-engine-0.hoon  tx-engine-1.hoon  tx-engine.hoon  zoon.hoon
hoon/scripts/: generate-bridge-address.hoon  generate-fund-address.hoon  generate-fund-note-name.hoon
hoon/tests/: BUILD.bazel
(+1045 files in other folders)
