# Root BUILD file for the nockchain workspace.
#
# Tracked as BUILD.open.bazel and renamed to BUILD.bazel by the export
# pipeline, so it only marks a Bazel package once this directory is the
# repository root.

package(default_visibility = ["//visibility:public"])

exports_files([
    ".bazelrc",
    ".bazelversion",
    "Cargo.toml",
    "Cargo.lock",
    "MODULE.bazel.lock",
    "Makefile",
    "rust-toolchain.toml",
    "rustfmt.toml",
])

# Convenience aliases for the primary binaries.
alias(
    name = "nockchain",
    actual = "//crates/nockchain",
)

alias(
    name = "nockchain-wallet",
    actual = "//crates/nockchain-wallet",
)

alias(
    name = "hoonc",
    actual = "//crates/hoonc:hoonc_bin",
)

# All kernel jam files compiled from Hoon sources via rules_hoon.
alias(
    name = "kernels",
    actual = "//assets:kernels",
)
