"""
Bazel module definition for the 'nada' project.
Sets up Rust toolchain and dependencies using rules_rust.
"""

module(
    name = "nockchain",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.60.0")
bazel_dep(name = "rules_shell", version = "0.4.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

# `rustc --version --verbose` generally
# leave a comment if you have a reason for doing otherwise.
# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "20.1.0",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["nightly/2025-04-26"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Set up crate_universe for managing dependencies
crates = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    generate_binaries = True,
    manifests = [
        "//:Cargo.toml",
        "//crates/equix-latency:Cargo.toml",
        "//crates/kernels/bridge:Cargo.toml",
        "//crates/kernels/dumb:Cargo.toml",
        "//crates/kernels/miner:Cargo.toml",
        "//crates/kernels/nockchain-peek:Cargo.toml",
        "//crates/kernels/wallet:Cargo.toml",
        "//crates/nockapp:Cargo.toml",
        "//crates/hoonc:Cargo.toml",
        "//crates/nockchain:Cargo.toml",
        "//crates/nockchain-libp2p-io:Cargo.toml",
        "//crates/nockchain-math:Cargo.toml",
        "//crates/nockchain/utilities:Cargo.toml",
        "//crates/nockvm/rust/nockvm:Cargo.toml",
        "//crates/nockvm/rust/nockvm_crypto:Cargo.toml",
        "//crates/nockvm/rust/nockvm_macros:Cargo.toml",
        "//crates/nockvm/rust/ibig:Cargo.toml",
        "//crates/nockvm/rust/murmur3:Cargo.toml",
        "//crates/nockvm/rust/assert_no_alloc:Cargo.toml",
        "//crates/zkvm-jetpack:Cargo.toml",
    ],
)
use_repo(crates, "crates")
