load("//:rules_hoon/defs.bzl", "hoon_library")
# load("//:rules_hoon/hoon_incremental.bzl", "hoon_incremental_library")

package(default_visibility = ["//visibility:public"])

# # Base target for initial Hoon compilation
# hoon_incremental_library(
#     name = "hoon_138",
#     jam_filename = "hoon-138",
#     src = "//crates/hoonc/hoon:hoon-138.hoon",
#     new = True,
#     arbitrary = True,
#     deps = [],
#     # No checkpoint_dep needed for first build in chain
# )

# hoon_incremental_library(
#     name = "common_zeke",
#     jam_filename = "common_zeke",
#     src = "//hoon/common:zeke.hoon",
#     arbitrary = True,
#     deps = [
#         "//hoon/common/ztd:files",
#     ],
#     checkpoint_dep = ":hoon_138_compile",
# )

hoon_library(
    name = "bridge",
    src = "//hoon/apps/bridge:bridge.hoon",
    deps = [
        "//hoon/apps/bridge:files",
        "//hoon/apps/dumbnet:files",
        "//hoon/apps/dumbnet/lib:files",
        "//hoon/apps/wallet/lib:files",
        "//hoon/common:files",
        "//hoon/common/markdown:files",
        "//hoon/common/stark:files",
        "//hoon/common/ztd:files",
        "//hoon/dat:files",
        "//hoon/jams:files",
    ],
)
# # Dumbnet kernel
# hoon_incremental_library(
#     name = "dumbnet_inner",
#     jam_filename = "dumbnet_inner",
#     src = "//hoon/apps/dumbnet:inner.hoon",
#     arbitrary = True,
#     deps = [
#         "//hoon/apps/dumbnet:miner.hoon",
#         "//hoon/apps/dumbnet/lib:files",
#         "//hoon/common:files",
#         "//hoon/common/stark:files",
#         "//hoon/common/v0-v1/table:files",
#         "//hoon/common/v2/table:files",
#         "//hoon/common/ztd:files",
#         "//hoon/dat:files",
#     ],
#     checkpoint_dep = ":common_zeke_compile",
#     visibility = ["//visibility:public"],
# )

hoon_library(
    name = "dumb",
    # jam_filename = "dumb",
    src = "//hoon/apps/dumbnet:outer.hoon",
    arbitrary = False,
    deps = [
        "//hoon/apps/dumbnet:inner.hoon",
        "//hoon/apps/dumbnet:miner.hoon",
        "//hoon/apps/dumbnet/lib:files",
        "//hoon/common:files",
        "//hoon/common/stark:files",
        "//hoon/common/ztd:files",
        "//hoon/dat:files",
        "//hoon/jams:files",
    ],
    # checkpoint_dep = ":dumbnet_inner_compile",
)

# /=  bip39  /common/bip39
# /=  slip10  /common/slip10
# /=  m  /common/markdown/types
# /=  md  /common/markdown/markdown
# /=  transact  /common/tx-engine
# /=  z   /common/zeke
# /=  zo  /common/zoon
# /=  dumb  /apps/dumbnet/lib/types
# /=  *   /common/zose
# /=  *  /common/wrapper

# hoon_incremental_library(
#     name = "markdown",
#     jam_filename = "markdown",
#     src = "//hoon/common/markdown:markdown.hoon",
#     arbitrary = True,
#     deps = [
#         "//hoon/common/markdown:types.hoon",
#     ],
#     checkpoint_dep = ":dumbnet_lib_consensus_compile",
# )

# Peek kernel
hoon_library(
    name = "peek",
    src = "//hoon/apps/peek:peek.hoon",
    arbitrary = False,
    deps = [
        "//hoon/common:files",
        "//hoon/common/stark:files",
        "//hoon/common/ztd:files",
        "//hoon/dat:files",
        "//hoon/jams:files",
    ],
)

hoon_library(
    name = "wal",
    # jam_filename = "wal",
    src = "//hoon/apps/wallet:wallet.hoon",
    arbitrary = False,
    deps = [
        "//hoon/apps/bridge:types.hoon",
        "//hoon/apps/dumbnet:miner.hoon",
        "//hoon/apps/dumbnet/lib:asert.hoon",
        "//hoon/apps/dumbnet/lib:types.hoon",
        "//hoon/apps/wallet/lib:files",
        "//hoon/common:files",
        "//hoon/common/markdown:files",
        "//hoon/common/stark:files",
        "//hoon/common/ztd:files",
        "//hoon/dat:files",
        "//hoon/jams:files",
    ],
    # checkpoint_dep = ":dumbnet_inner_compile",
)

hoon_library(
    name = "miner",
    # jam_filename = "miner",
    src = "//hoon/apps/dumbnet:miner.hoon",
    arbitrary = False,
    deps = [
        "//hoon/apps/dumbnet/lib:asert.hoon",
        "//hoon/common:files",
        "//hoon/common/stark:files",
        "//hoon/common/ztd:files",
        "//hoon/dat:files",
        "//hoon/jams:files",
    ],
    # checkpoint_dep = ":common_zeke_compile",
)

hoon_library(
    name = "roswell",
    src = "//hoon/apps/roswell:roswell.hoon",
    arbitrary = False,
    deps = [
        "//hoon/apps/bridge:files",
        "//hoon/apps/dumbnet:inner.hoon",
        "//hoon/apps/dumbnet:miner.hoon",
        "//hoon/apps/dumbnet:outer.hoon",
        "//hoon/apps/dumbnet/lib:files",
        "//hoon/apps/roswell:files",
        "//hoon/apps/wallet:wallet.hoon",
        "//hoon/apps/wallet/lib:files",
        "//hoon/common:files",
        "//hoon/common/markdown:files",
        "//hoon/common/stark:files",
        "//hoon/common/ztd:files",
        "//hoon/dat:files",
        "//hoon/jams:files",
        "//hoon/tests:files",
    ],
)

# Group all kernel assets
filegroup(
    name = "kernels",
    srcs = [
        ":bridge",
        ":dumb",
        ":miner",
        ":peek",
        ":roswell",
        ":wal",
    ],
)

# Target for all assets
filegroup(
    name = "all",
    srcs = [
        ":kernels",
    ],
)

filegroup(
    name = "jam_files",
    srcs = glob(
        ["*.jam"],
        allow_empty = True,
    ),
)
