package(default_visibility = ["//visibility:public"])

filegroup(
    name = "files",
    srcs = glob([
        "*.hoon",
        "**/*.hoon",
    ]),
)

exports_files(glob(["*.hoon"]))

exports_files(glob(["**/*.hoon"]))

# Test jam files needed for testing
filegroup(
    name = "test-jams",
    srcs = glob(["test-jams/**/*.jam"]),
    visibility = ["//visibility:public"],
)
