[package]
name = "ai-pow-zk"
# Experimental: the public API surface, AIR layout, and proof byte format
# are all subject to change while the circuit is being designed.
version = "0.1.0-experimental"
edition.workspace = true
description = "EXPERIMENTAL — Plonky3 SNARK circuit for the ai-pow tiling matmul puzzle."
publish = false

[dependencies]
# Intentionally **not** a dep of `ai-pow`. The proving crate
# (`ai-pow`) is the consumer; making `ai-pow-zk` depend back on it would
# introduce a cycle. The caller in `ai-pow` constructs `ZkParams` and
# `Witness` from its own types and passes them across the boundary.
thiserror = { workspace = true }
# `ZkProof` is the on-the-wire serialization of `p3_uni_stark::Proof`.
# Plonky3 proofs already derive serde, so we just need a serializer.
# Bincode 2 (`features = ["serde"]`) gives a compact binary blob; the
# wire format stays internal to this crate.
bincode = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
# `blake3` is used out-of-circuit by `verify` to derive `pow_key` from
# the public inputs (kappa → s_B → s_A → pow_key chain, matches
# `ai-pow::fiat_shamir`) and to compute the keyed-hash check
# `BLAKE3_keyed(M_final, pow_key) == public_inputs.found_leaf`.
# The in-circuit BLAKE3 variant is M10.1b — see ROADMAP.md.
blake3 = { workspace = true }
# Used by the vendored `p3-blake3-air` source in `src/blake3_chip/`
# (M10.1b). Constraint logic upstream uses `izip!` for round mixing.
itertools = "0.13"

# Plonky3. The upstream publishes irregularly to crates.io; pin to a
# git revision here and bump `rev` when the circuit needs newer field /
# AIR features. See https://github.com/Plonky3/Plonky3 for releases.
#
# Stack choice (see DESIGN.md for rationale):
#   * Goldilocks base field (2^64 − 2^32 + 1) — Plonky3-native, matches
#     Pearl's choice, friendly for 32-bit ops the BLAKE3 sub-AIR needs.
#   * BinomialExtensionField<Goldilocks, 2> for FRI challenges (degree 2).
#   * Tip5 sponge as the FRI compression hash — ZK-friendly, faster than
#     Poseidon2 on Goldilocks per recent benchmarks.
#   * `p3-blake3-air` for the BLAKE3 keyed-hash sub-AIR — our protocol
#     uses BLAKE3 keyed hashes everywhere (kappa, s_a, s_b, pow_key,
#     matrix commits, jackpot hash); the sub-AIR proves the keyed-hash
#     transitions inside the circuit so we don't have to re-prove BLAKE3
#     by hand.
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-batch-stark = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-blake3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-lookup = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" }

# Tip5 sponge — Plonky3 upstream does NOT ship a `p3-tip5` crate.
# Nockchain has its own in-repo Tip5 implementation in
# `crates/nockchain-math/src/tip5/` (16-element state, rate 10,
# capacity 6, digest 5). The 7-round count is Nockchain's parameter
# modification of the published Tip5 paper. We re-use it directly so
# the FRI sponge stays consistent with Nockchain's other cryptographic
# surfaces.
nockchain-math = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
